<resources>
    <string name="app_name">CodeMeLikeOneOfYourFrenchGirls</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_application_id" translatable="false">665277240597003</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb665277240597003</string>
    <string name="event_name">Event name</string>
    <string name="event_details">Add your event details...</string>
    <string name="add_event_needs">Add event needs</string>
    <string name="empty_string" />
    <string name="entry_is_charged">Entry is charged</string>
    <string name="enter_value">Enter value</string>
    <string name="kn">kn</string>
    <string name="public_event">Public event(Coming soon)</string>
    <string name="private_event">Private event(Coming soon)</string>
    <string name="create">Create</string>
    <string name="event_start">Event starts on :%d.%d.%d.</string>

    <!-- interest-->
    <string name="Tennis">Tennis</string>
    <string name="Table_Tennis">Table Tennis</string>
    <string name="Volleyball">Football</string>
    <string name="Chess">Chess</string>
    <string name="Bicycling">Bicycling</string>
    <string name="Skating">Skating</string>
    <string name="Badminton">Badminton</string>
    <string name="Mountain_climbing">Mountain climbing</string>
    <string name="Dog_walking">Dog walking</string>
    <string name="Walking">Walking</string>
    <string name="Canicross">Canicross </string>
    <string name="Card_games">Card games</string>
    <string name="Museums">Museums</string>
    <string name="Theater">Theater</string>
    <string name="Conference">Conference</string>
    <string name="Concerts">Badminton</string>
    <string name="Football">Football</string>
    <string name="Basketball">Basketball</string>
    <string name="Handball">Handball</string>
    <string name="Fitness">Fitness</string>
    <string name="Running">Running</string>
    <string name="Boardgames">Board Games</string>
    <string name="Social">Social</string>
    <string name="title_activity_maps">Map</string>

</resources>
